--- a/KTUtils/WPFGoodies/WPFGoodies.csproj
+++ b/KTUtils/WPFGoodies/WPFGoodies.csproj
@@ -39,12 +39,14 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Presentation" />
+    <Reference Include="System.Xaml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="KTFileIconHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="KTVisualTreeHelper.cs" />
+    <Compile Include="UpdatableMarkupExtension.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
