--- a/KTUtils/WPFGoodies/WPFGoodies.csproj
+++ b/KTUtils/WPFGoodies/WPFGoodies.csproj
@@ -43,10 +43,16 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DynamicTemplateSelector.cs" />
     <Compile Include="KTFileIconHelper.cs" />
+    <Compile Include="MarkupExtensions\SystemDateTime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="KTVisualTreeHelper.cs" />
+    <Compile Include="SingleInstanceAppHelper.cs" />
     <Compile Include="UpdatableMarkupExtension.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controls\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
