--- a/KTUtils/WPFGoodies/WPFGoodies.csproj
+++ b/KTUtils/WPFGoodies/WPFGoodies.csproj
@@ -51,9 +51,7 @@
     <Compile Include="SingleInstanceAppHelper.cs" />
     <Compile Include="UpdatableMarkupExtension.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controls\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
